fix: modal centered respective to parent Modal shifts itself by how much width sidebar is taking

--- a/client/src/Components/Layouts/HomeLayout/index.css
+++ b/client/src/Components/Layouts/HomeLayout/index.css
@@ -17,7 +17,6 @@
 	top: 0;
 	left: 0;
 	height: 100vh;
-	max-width: var(--env-var-side-bar-width);
 }
 
 .home-layout > div {
